@@ -20,6 +20,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import ru.rt.restream.reindexer.Namespace;
 import ru.rt.restream.reindexer.Query;
@@ -31,9 +32,12 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.domain.Sort.Order;
+import org.springframework.data.reindexer.core.convert.ReindexerConverter;
+import org.springframework.data.reindexer.core.mapping.ReindexerMappingContext;
 import org.springframework.data.reindexer.repository.ReindexerRepository;
 import org.springframework.data.reindexer.repository.query.ReindexerEntityInformation;
 import org.springframework.data.reindexer.repository.util.PageableUtils;
+import org.springframework.data.reindexer.repository.util.QueryUtils;
 import org.springframework.data.support.PageableExecutionUtils;
 import org.springframework.util.Assert;
 
@@ -46,16 +50,28 @@ public class SimpleReindexerRepository<T, ID> implements ReindexerRepository<T, 
 
 	private final ReindexerEntityInformation<T, ID> entityInformation;
 
+	private final ReindexerMappingContext mappingContext;
+
+	private final Reindexer reindexer;
+
 	private final Namespace<T> namespace;
+
+	private final ReindexerConverter reindexerConverter;
 
 	/**
 	 * Creates an instance.
 	 *
 	 * @param entityInformation the {@link ReindexerEntityInformation} to use
+	 * @param mappingContext the {@link ReindexerMappingContext} to use
 	 * @param reindexer the {@link Reindexer} to use
+	 * @param reindexerConverter the {@link ReindexerConverter} to use
 	 */
-	public SimpleReindexerRepository(ReindexerEntityInformation<T, ID> entityInformation, Reindexer reindexer) {
+	public SimpleReindexerRepository(ReindexerEntityInformation<T, ID> entityInformation,
+			ReindexerMappingContext mappingContext, Reindexer reindexer, ReindexerConverter reindexerConverter) {
 		this.entityInformation = entityInformation;
+		this.mappingContext = mappingContext;
+		this.reindexer = reindexer;
+		this.reindexerConverter = reindexerConverter;
 		this.namespace = openNamespace(entityInformation, reindexer);
 	}
 
@@ -90,27 +106,32 @@ public class SimpleReindexerRepository<T, ID> implements ReindexerRepository<T, 
 	@Override
 	public Optional<T> findById(ID id) {
 		Assert.notNull(id, "The given id must not be null!");
-		return this.namespace.query().where(this.entityInformation.getIdFieldName(), Query.Condition.EQ, id).findOne();
+		return joinedQuery().where(this.entityInformation.getIdFieldName(), Query.Condition.EQ, id).findOne()
+				.map(e -> this.reindexerConverter.read(this.entityInformation.getJavaType(), e));
 	}
 
 	@Override
 	public boolean existsById(ID id) {
 		Assert.notNull(id, "The given id must not be null!");
-		return this.namespace.query().where(this.entityInformation.getIdFieldName(), Query.Condition.EQ, id).exists();
+		return query().where(this.entityInformation.getIdFieldName(), Query.Condition.EQ, id).exists();
 	}
 
 	@Override
 	public List<T> findAll() {
-		return this.namespace.query().toList();
+		return joinedQuery().stream()
+				.map(e -> this.reindexerConverter.read(this.entityInformation.getJavaType(), e))
+				.collect(Collectors.toList());
 	}
 
 	@Override
 	public List<T> findAll(Sort sort) {
-		Query<T> query = this.namespace.query();
+		Query<T> query = joinedQuery();
 		for (Order order : sort) {
 			query = query.sort(order.getProperty(), order.isDescending());
 		}
-		return query.toList();
+		return query.stream()
+				.map(e -> this.reindexerConverter.read(this.entityInformation.getJavaType(), e))
+				.collect(Collectors.toList());
 	}
 
 	@Override
@@ -118,7 +139,7 @@ public class SimpleReindexerRepository<T, ID> implements ReindexerRepository<T, 
 		if (pageable.isUnpaged()) {
 			return new PageImpl<>(findAll());
 		}
-		Query<T> query = this.namespace.query();
+		Query<T> query = joinedQuery();
 		for (Order order : pageable.getSort()) {
 			query.sort(order.getProperty(), order.isDescending());
 		}
@@ -126,7 +147,7 @@ public class SimpleReindexerRepository<T, ID> implements ReindexerRepository<T, 
 		try (ResultIterator<T> iterator = query.execute()) {
 			List<T> content = new ArrayList<>();
 			while (iterator.hasNext()) {
-				content.add(iterator.next());
+				content.add(this.reindexerConverter.read(this.entityInformation.getJavaType(), iterator.next()));
 			}
 			return PageableExecutionUtils.getPage(content, pageable, iterator::getTotalCount);
 		}
@@ -135,7 +156,9 @@ public class SimpleReindexerRepository<T, ID> implements ReindexerRepository<T, 
 	@Override
 	public List<T> findAllById(Iterable<ID> ids) {
 		Assert.notNull(ids, "The given Ids of entities not be null!");
-		return this.namespace.query().where(this.entityInformation.getIdFieldName(), Query.Condition.SET, toSet(ids)).toList();
+		return joinedQuery().where(this.entityInformation.getIdFieldName(), Query.Condition.SET, toSet(ids)).stream()
+				.map(e -> this.reindexerConverter.read(this.entityInformation.getJavaType(), e))
+				.collect(Collectors.toList());
 	}
 
 	private Set<ID> toSet(Iterable<? extends ID> ids) {
@@ -151,13 +174,13 @@ public class SimpleReindexerRepository<T, ID> implements ReindexerRepository<T, 
 
 	@Override
 	public long count() {
-		return this.namespace.query().count();
+		return query().count();
 	}
 
 	@Override
 	public void deleteById(ID id) {
 		Assert.notNull(id, "The given id must not be null!");
-		this.namespace.query().where(this.entityInformation.getIdFieldName(), Query.Condition.EQ, id).delete();
+		query().where(this.entityInformation.getIdFieldName(), Query.Condition.EQ, id).delete();
 	}
 
 	@Override
@@ -169,7 +192,7 @@ public class SimpleReindexerRepository<T, ID> implements ReindexerRepository<T, 
 	@Override
 	public void deleteAllById(Iterable<? extends ID> ids) {
 		Assert.notNull(ids, "The given Iterable of ids must not be null!");
-		this.namespace.query().where(this.entityInformation.getIdFieldName(), Query.Condition.SET, toSet(ids)).delete();
+		query().where(this.entityInformation.getIdFieldName(), Query.Condition.SET, toSet(ids)).delete();
 	}
 
 	@Override
@@ -180,7 +203,13 @@ public class SimpleReindexerRepository<T, ID> implements ReindexerRepository<T, 
 
 	@Override
 	public void deleteAll() {
-		this.namespace.query().delete();
+		query().delete();
+	}
+
+	@SuppressWarnings("unchecked")
+	private Query<T> joinedQuery() {
+		Query<T> query = query();
+		return (Query<T>) QueryUtils.withJoins(query, this.entityInformation.getJavaType(), this.mappingContext, this.reindexer);
 	}
 
 }
